--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^1.0.6",
     "next": "12.1.5",
+    "next-auth": "^4.3.2",
     "react": "18.0.0",
-    "react-dom": "18.0.0"
+    "react-dom": "18.0.0",
+    "spotify-web-api-node": "^5.0.2"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.4",
